src/objects/District__c.object
<CustomObject>
    <fields>
        <fullName>District_Pin_Code__c</fullName>
        <label>District Pin Code</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identification__c</fullName>
        <formula>HYPERLINK(&quot;https://fexleservicespvtltdjaipur2-dev-ed.lightning.force.com/lightning/o/Country__c/list?filterName=00B5i000008eqlwEAA&quot;, State_Name__r.Country_Name__r.Name , &quot;_self&quot;) + &apos; -&gt; &apos; + HYPERLINK(&quot;https://fexleservicespvtltdjaipur2-dev-ed.lightning.force.com/lightning/o/State__c/list?filterName=00B5i000008eqmiEAA&quot;, State_Name__r.Name , &quot;_self&quot;) + &apos; -&gt; &apos; + HYPERLINK(&quot;https://fexleservicespvtltdjaipur2-dev-ed.lightning.force.com/lightning/o/District__c/list?filterName=00B5i000008eqotEAA&quot;, Name , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State Name</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Districts</relationshipLabel>
        <relationshipName>Districts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>District</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>District_Pin_Code__c</columns>
        <columns>State_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Districts_of_Haryana</fullName>
        <columns>NAME</columns>
        <columns>District_Pin_Code__c</columns>
        <columns>State_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State_Name__c</field>
            <operation>equals</operation>
            <value>Haryana</value>
        </filters>
        <label>Districts of Haryana</label>
    </listViews>
    <listViews>
        <fullName>Districts_of_Rajasthan</fullName>
        <columns>NAME</columns>
        <columns>District_Pin_Code__c</columns>
        <columns>State_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State_Name__c</field>
            <operation>equals</operation>
            <value>Rajasthan</value>
        </filters>
        <label>Districts of Rajasthan</label>
    </listViews>
    <listViews>
        <fullName>Districts_of_Uttar_Pradesh</fullName>
        <columns>NAME</columns>
        <columns>District_Pin_Code__c</columns>
        <columns>State_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State_Name__c</field>
            <operation>equals</operation>
            <value>Uttar Pradesh</value>
        </filters>
        <label>Districts of Uttar Pradesh</label>
    </listViews>
    <nameField>
        <label>District Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Districts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>